--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-checkbox": "^2.1.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
@@ -26,7 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "^18.0.15",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "^0.66.19",
     "@types/react-native-vector-icons": "^6.4.11",
     "typescript": "~4.3.5"
   },
