--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
+    "@types/yup": "^0.29.14",
     "expo": "~45.0.0",
     "expo-checkbox": "^2.1.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
@@ -23,7 +26,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
