--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
     "@types/yup": "^0.29.14",
